<?xml version="1.0"?>
<package format="3">
  <name>robot_localization</name>
  <version>3.8.3</version>
  <description>Interface-only robot_localization services required by the ZED wrapper.</description>
  <maintainer email="macho@todo.todo">macho</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
